# VHX

./: Makefile.am  README.md  coll_vhx.c  coll_vhx.h  coll_vhx_allreduce.c  coll_vhx_barrier.c  coll_vhx_bcast.c  coll_vhx_component.c  coll_vhx_module.c
vhx/: Makefile.am  coll_vhx.c  coll_vhx.h  coll_vhx_allreduce.c  coll_vhx_barrier.c  coll_vhx_bcast.c  coll_vhx_bcast_backuo.c  coll_vhx_component.c  coll_vhx_module.c  help-coll-vhx.txt
vhx/.deps/: coll_vhx.Plo  coll_vhx_allreduce.Plo  coll_vhx_barrier.Plo  coll_vhx_bcast.Plo  coll_vhx_component.Plo  coll_vhx_module.Plo  coll_vhx_reduce.Plo
vhx/.libs/: libmca_coll_vhx.la
